--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ click = "==8.1.3"
 Pillow = "==9.4.0"
 
 [dev-packages]
+Faker = "==16.4.0"
+piexif = "==1.1.3"
 
 [requires]
 python_version = "3.10"
