--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,6 +30,6 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --ignore=E402,F401,W503,E501 --statistics
 
       - name: Unit testing
-        working-directory: ./tests
+        working-directory: .
         run: |
-          pipenv run pytest test_unit.py
+          pipenv run pytest tests/test_unit.py
