Removed coverage testing and combined unit + function testing

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,11 +28,7 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # check for general errors or bad practices. Ignore line length and minor nits
           flake8 . --count --exit-zero --max-complexity=10 --ignore=E402,F401,W503,E501 --statistics
-      - name: Unit testing
+      - name: Pytest
         working-directory: .
         run: |
-          pipenv run pytest tests/test_unit.py
-      - name: Function testing with coverage
-        working-directory: .
-        run: |
-          pipenv run pytest --cov tests/test_function.py
+          pipenv run pytest 
