--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          pipenv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # check for general errors or bad practices. Ignore line length and minor nits
-          flake8 . --count --exit-zero --max-complexity=10 --ignore=E402,F401,W503,E501 --statistics
+          pipenv run flake8 . --count --exit-zero --max-complexity=10 --ignore=E402,F401,W503,E501 --statistics
