--- a/Pipfile
+++ b/Pipfile
@@ -6,12 +6,13 @@ name = "pypi"
 [packages]
 click = "==8.1.3"
 Pillow = "==9.4.0"
-pytest = "==7.2.1"
-pytest-cov = "==4.0.0"
 
 [dev-packages]
 Faker = "==16.4.0"
 piexif = "==1.1.3"
+pytest = "==7.2.1"
+pytest-cov = "==4.0.0"
+flake8 = "==6.0.0"
 
 [requires]
 python_version = "3.10"
