--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pixe"
-version = "0.5.6"
+dynamic = ["version"]
 description = "A digital helper to keep your files neat and tidy"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -34,3 +34,6 @@ homepage = "https://github.com/ithuna/pixe.git"
 
 [project.scripts]
 pixe = "pixe:cli"
+
+[tool.setuptools.dynamic]
+version = {attr = "package.__version__"}
