--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ piexif = "==1.1.3"
 Faker = "==16.4.0"
 pytest = "==7.2.1"
 pytest-cov = "==4.0.0"
+pytest-freezegun = "==0.4.2"
 flake8 = "==6.0.0"
 twine = "*"
 
