--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 click = "==8.1.3"
 Pillow = "==9.4.0"
 piexif = "==1.1.3"
+ffmpeg-python = "==0.2.0"
 
 [dev-packages]
 Faker = "==16.4.0"
