--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "Click>=8.1.3,<8.2",
     "Pillow>=9.4.0,<9.5",
     "piexif>=1.1.3,<1.2",
+    "ffmpeg-python>=0.2.0,<0.3.0",
 ]
 
 [project.optional-dependencies]
