--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,9 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[scripts]
+pixe = {call = "src.pixe:cli()"}
+
 [packages]
 click = "==8.1.3"
 Pillow = "==9.4.0"
