--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,11 @@ pixe = {call = "src.pixe:cli()"}
 
 [packages]
 click = "==8.1.3"
-Pillow = "==9.4.0"
+Pillow = ">=9.4.0"
 piexif = "==1.1.3"
 ffmpeg-python = "==0.2.0"
+pillow-heif = ">=0.16.0"
+pyexiftool = ">=0.5.0"
 
 [dev-packages]
 Faker = "==16.4.0"
