--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pixe"
-version = "0.6.0"
+version = "0.7.0"
 description = "A digital helper to keep your files neat and tidy"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -18,9 +18,11 @@ classifiers = [
 ]
 dependencies = [
     "Click>=8.1.3,<8.2",
-    "Pillow>=9.4.0,<9.5",
+    "Pillow>=10.4.0,<10.5",
     "piexif>=1.1.3,<1.2",
     "ffmpeg-python>=0.2.0,<0.3.0",
+    "pillow-heif >=0.16.0",
+    "pyexiftool >=0.5.0",
 ]
 
 [project.optional-dependencies]
