--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,43 +1,46 @@
-[project]
+[tool.poetry]
 name = "pixe"
 version = "0.7.2"
 description = "A digital helper to keep your files neat and tidy"
 readme = "README.md"
-requires-python = ">=3.11"
-license = {text = "Apache License, Version 2.0"}
-keywords = ["archive", "photos", "organize"]
+license = "Apache-2.0"
+keywords = ["archive",
+	    "photos",
+	    "organize"
+]
 authors = [
-    {name = "Chris Wells", email = "chris@ithuna.com"},
+    "Chris Wells <ping@cwlls.dev>"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: Apache Software License",
     "Development Status :: 3 - Alpha",
     "Environment :: Console",
-    "Topic :: System :: Archiving",
-]
-dependencies = [
-    "Click>=8.1.3,<8.2",
-    "Pillow>=10.3.0,<10.4",
-    "piexif>=1.1.3,<1.2",
-    "ffmpeg-python>=0.2.0,<0.3.0",
-    "pillow-heif >=0.16.0",
-    "pyexiftool >=0.5.0",
+    "Topic :: System :: Archiving"
 ]
 
-[project.optional-dependencies]
-tests = [
-    "pytest>=7.2.1,<7.3",
-    "pytest-cov>=4.0.0,<4.1",
-    "pytest-freezegun>=0.4.2,<0.5.0",
-    "flake8>=6.0.0,<6.1",
-]
+[tool.poetry.dependencies]
+Python = "^3.11"
+Click = "^8.1.3"
+Pillow = "^10.3.0"
+piexif = "^1.1.3"
+ffmpeg-python = "^0.2.0"
+pillow-heif = "^0.16.0"
+pyexiftool = "^0.5.0"
 
-[project.urls]
-homepage = "https://github.com/ithuna/pixe.git"
+[tool.poetry.group.test.dependencies]
+pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
+pytest-freezegun = "^0.4.2"
+flake8 = "^6.0.0"
 
-[project.scripts]
+[tool.poetry.urls]
+homepage = "https://cwlls.dev/pixe"
+repository = "https://github.com/cwlls/pixe.git"
+
+[tool.poetry.scripts]
 pixe = "pixe:cli"
 
-[tool.setuptools.dynamic]
-version = {attr = "package.__version__"}
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonary.api"
