enable logging in tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,6 @@ pixe = "pixe.main:cli"
 [build-system]
 requires = ["uv_build>=0.9.5,<0.10.0"]
 build-backend = "uv_build"
+
+[tool.pytest.ini_options]
+log_cli = true
