--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,7 +27,7 @@ jobs:
           enable-cache: true
 
       - name: "Install the project"
-        run: uv sync --locked --all-extras --dev
+        run: uv sync --all-extras --dev
 
       - name: Run unit tests
         run: uv run pytest tests/test_unit.py
