--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: "Install exiftool"
+        run: sudo apt install -y exiftool
+
       - name: "Install uv"
         uses: astral-sh/setup-uv@v6
         with:
